--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,8 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
 />
+<!-- Main CSS of heatmap -->
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/patientslikeme/react-calendar-heatmap/d0a7d802/src/styles.css">
     <!-- BOOTSTRAP -->
 
 
